added some new file and made some changes

--- a/html/admin_login.html
+++ b/html/admin_login.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login Page</title>
+    <title>admin login Page</title>
     <link rel="stylesheet" href="/css/global.css" />
-    <link rel="stylesheet" href="/css/login.css" />
+    <link rel="stylesheet" href="/css/admin_login.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
       rel="stylesheet"
     />
-    <script defer src="/js/login.js"></script>
+    <script defer src="/js/admin_login.js"></script>
   </head>
   <body>
     <div class="container">
@@ -58,11 +58,8 @@
 
       <div class="sign-up">
         <p>
-          Login as an
-          <a class="admin-login" href="/html/admin_login.html">Admin</a>
+          Login as a <a class="admin-login" href="/html/login.html">User</a>
         </p>
-        <p>Or Sign Up using</p>
-        <a href="/html/signup.html">SIGN UP</a>
       </div>
     </div>
   </body>
