--- a/html/signup.html
+++ b/html/signup.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
       rel="stylesheet"
     />
+    <style></style>
     <script defer src="/js/signup.js"></script>
   </head>
   <body>
@@ -75,8 +76,8 @@
           <div class="input-box password_cont_border">
             <img src="/svg/password.svg" alt="" />
             <input
-              type="text"
-              pattern="\d*"
+              type="password"
+              min="1"
               maxlength="20"
               placeholder="Enter Password"
               id="password-input"
