--- a/html/home_page.html
+++ b/html/home_page.html
@@ -6,15 +6,16 @@
     <title>Home page</title>
     <link rel="stylesheet" href="/css/global.css" />
     <link rel="stylesheet" href="/css/home_page.css" />
+    <script defer src="/js/home_page.js"></script>
   </head>
   <body>
-    <section>
+    <section class="container">
       <header>
         <div class="welcome-msg">
           <h2>Welcome Back!</h2>
-          <p>Fred</p>
+          <p id="profile-name">Fred</p>
         </div>
-        <img src="/img/test-profile.jpeg" alt="" />
+        <img src="/img/test-profile.jpeg" alt="Profile picture" />
       </header>
 
       <main>
@@ -40,14 +41,23 @@
           </div>
         </div>
       </main>
-
-      <nav class="nav-bar">
-        <div class="nav-items nav-active">
-          <img src="/svg/home.svg" alt="" />
-        </div>
-        <div class="nav-items"><img src="/svg/menu.svg" alt="" /></div>
-        <div class="nav-items"><img src="/svg/profile-2.svg" alt="" /></div>
-      </nav>
     </section>
+
+    <nav class="nav-bar">
+      <div class="nav-items nav-active">
+        <img src="/svg/home.svg" alt="Home" />
+      </div>
+      <div class="nav-items">
+        <img src="/svg/password-2.svg" alt="Password" />
+      </div>
+      <div class="nav-items">
+        <img src="/svg/profile-2.svg" alt="Profile" />
+      </div>
+      <div class="nav-items">
+        <img src="/svg/password-2.svg" alt="Menu" />
+      </div>
+    </nav>
+
+    <div class="profile-popup"></div>
   </body>
 </html>
