--- a/html/add_poll.html
+++ b/html/add_poll.html
@@ -5,19 +5,164 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add Poll</title>
     <link rel="stylesheet" href="/css/global.css" />
-    <link rel="stylesheet" href="/css/add_poll.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
       rel="stylesheet"
     />
-    <script defer src="/js/add_poll.js"></script>
+    <style>
+      :root {
+        --primary-margin-top: 1rem;
+        --secondary-margin-top: 2rem;
+        --primary-margin-bottom: 1rem;
+        --secondary-margin-bottom: 2rem;
+        --nav-height: 5rem; /* Adjust this value based on your navigation bar's actual height */
+      }
+
+      /* Global Styles */
+      body {
+        font-family: "Poppins", sans-serif;
+        font-size: 1.5rem;
+        margin: 0;
+        padding: 0;
+        padding-bottom: var(
+          --nav-height
+        ); /* Add padding to the bottom of the body */
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+      }
+
+      /* Poll Container */
+      .poll-container {
+        padding: 1rem 2rem;
+        padding-bottom: var(
+          --nav-height
+        ); /* Add padding to the bottom of the container */
+      }
+
+      /* Header Styles */
+      header h1 {
+        text-align: center;
+      }
+
+      /* Media Section */
+      .media-section {
+        margin-top: var(--primary-margin-bottom);
+      }
+
+      .slider {
+        background-color: hsl(208, 100%, 97%);
+        padding: 1rem;
+        display: flex;
+        gap: 2rem;
+        border-radius: 2rem;
+        overflow-x: auto;
+      }
+
+      .uploaded-imgs {
+        display: flex;
+        gap: 1rem;
+      }
+
+      .uploaded-img {
+        width: 15rem;
+        height: 15rem;
+        border-radius: 2rem;
+        object-fit: cover;
+      }
+
+      .add-media {
+        background-color: hsl(0, 0%, 86%);
+        padding: 1rem;
+        border-radius: 2rem;
+        width: 15rem;
+        height: 15rem;
+        font-size: 1.7rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        cursor: pointer;
+        flex-shrink: 0;
+      }
+
+      .add-media:active {
+        background-color: hsl(0, 0%, 62%);
+      }
+
+      .add-media img {
+        width: 2rem;
+      }
+
+      .add-media input {
+        display: none;
+      }
+
+      /* Question Section */
+      .question-section {
+        margin-top: var(--primary-margin-top);
+      }
+
+      .question-type {
+        width: 100%;
+        margin-top: 1rem;
+        padding: 1.7rem;
+        border: 1px solid hsla(0, 0%, 0%, 0.255);
+        border-radius: 2rem;
+        cursor: pointer;
+      }
+
+      .question-type:focus {
+        outline: none;
+      }
+
+      /* Answers Section */
+      .answers-section {
+        margin-top: var(--primary-margin-top);
+        background-color: hsl(0, 0%, 86%);
+        padding: 1rem;
+        border-radius: 2rem;
+      }
+
+      .answers {
+        margin-top: var(--primary-margin-top);
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+      }
+
+      .answer {
+        border: 1px solid hsla(0, 0%, 0%, 0.255);
+        border-radius: 0.5rem;
+        cursor: pointer;
+        transition: all 0.3s;
+        padding: 2rem;
+        border-radius: 2rem;
+        background-color: hsl(0, 0%, 62%);
+      }
+
+      .answer:active {
+        background-color: hsla(0, 0%, 0%, 0.035);
+      }
+
+      .add_answer {
+        background-color: hsl(0, 0%, 95%);
+        color: hsl(120, 95%, 37%);
+        border: 1px solid hsla(120, 95%, 37%, 0.374);
+      }
+
+      /* Divider Styles */
+      hr {
+        border: 1px solid hsla(0, 0%, 0%, 0.104);
+        margin-top: var(--primary-margin-top);
+      }
+    </style>
   </head>
   <body>
     <section class="poll-container">
       <header>
-        <h1 class="poll-question">
-          Is it worth to travel to these beautiful mountains?
-        </h1>
+        <h1 class="poll-question">Add new poll</h1>
       </header>
 
       <hr />
@@ -25,23 +170,16 @@
       <section class="media-section">
         <h3>Media</h3>
         <div class="slider">
-          <div class="uploaded-imgs">
-            <img
-              id="imagePreview"
-              src=""
-              alt="Image Preview"
-              style="display: none; max-width: 100%; border-radius: 2rem"
-            />
-          </div>
-
+          <div class="uploaded-imgs" id="uploadedImgs"></div>
           <div class="add-media" id="addMedia">
             <input
               type="file"
               id="fileInput"
               title="image-input"
               accept="image/*"
+              multiple
             />
-            <img src="/svg/picture.svg" alt="" />
+            <img src="/svg/picture.svg" alt="Add image icon" />
             <p>+ Add Media</p>
           </div>
         </div>
@@ -51,32 +189,83 @@
 
       <section class="question-section">
         <h3>Question Topic</h3>
-        <select class="question-type" id="question_type" title="appliances">
-          <option value="">Photography</option>
-          <option value="landscape">Landscape</option>
-          <option value="adventure">Adventure</option>
-          <option value="nature">Nature</option>
-          <option value="travel">Travel</option>
-        </select>
+        <input
+          class="question-type"
+          id="question_type"
+          type="text"
+          placeholder="Enter the topic"
+        />
       </section>
 
       <hr />
 
       <section class="answers-section">
         <h3>Answers</h3>
-        <div class="answers">
-          <div class="answer">Yes, sure</div>
-          <div class="answer">Not sure</div>
-          <div class="answer add_answer">+ Add option</div>
+        <div class="answers" id="answersContainer">
+          <div class="answer add_answer" id="addAnswer">+ Add option</div>
         </div>
       </section>
     </section>
     <nav class="nav-bar">
       <div class="nav-items nav-active">
-        <img src="/svg/home.svg" alt="" />
+        <img src="/svg/home.svg" alt="Home" />
       </div>
-      <div class="nav-items"><img src="/svg/menu.svg" alt="" /></div>
-      <div class="nav-items"><img src="/svg/profile-2.svg" alt="" /></div>
+      <div class="nav-items">
+        <img src="/svg/password-2.svg" alt="Password" />
+      </div>
+      <div class="nav-items">
+        <img src="/svg/profile-2.svg" alt="Profile" />
+      </div>
+      <div class="nav-items">
+        <img src="/svg/password-2.svg" alt="Menu" />
+      </div>
     </nav>
+    <script>
+      const addMedia = document.getElementById("addMedia");
+      const fileInput = document.getElementById("fileInput");
+      const uploadedImgs = document.getElementById("uploadedImgs");
+      const addAnswer = document.getElementById("addAnswer");
+      const answersContainer = document.getElementById("answersContainer");
+
+      addMedia.addEventListener("click", function () {
+        fileInput.click();
+      });
+
+      fileInput.addEventListener("change", function (event) {
+        const files = event.target.files;
+        for (let i = 0; i < files.length; i++) {
+          const file = files[i];
+          if (file) {
+            const reader = new FileReader();
+            reader.onload = function (e) {
+              const img = document.createElement("img");
+              img.src = e.target.result;
+              img.classList.add("uploaded-img");
+              uploadedImgs.appendChild(img);
+            };
+            reader.readAsDataURL(file);
+          }
+        }
+      });
+
+      // New functionality to add answer options
+      addAnswer.addEventListener("click", function () {
+        const newAnswer = document.createElement("div");
+        newAnswer.classList.add("answer");
+        newAnswer.contentEditable = true;
+        newAnswer.textContent = "";
+        answersContainer.insertBefore(newAnswer, addAnswer);
+
+        // Focus on the new answer option for immediate editing
+        newAnswer.focus();
+
+        // Add event listener to save changes when user finishes editing
+        newAnswer.addEventListener("blur", function () {
+          if (newAnswer.textContent.trim() === "") {
+            answersContainer.removeChild(newAnswer);
+          }
+        });
+      });
+    </script>
   </body>
 </html>
