--- a/html/voting_page.html
+++ b/html/voting_page.html
@@ -46,14 +46,24 @@
             <div class="option">Over a Month Before</div>
           </div>
         </div>
+
+        <div class="submit-btn">Submit</div>
       </section>
     </div>
-    <nav class="nav-bar">
+
+    <!-- <nav class="nav-bar">
       <div class="nav-items nav-active">
-        <img src="/svg/home.svg" alt="" />
+        <img src="/svg/home.svg" alt="Home" />
       </div>
-      <div class="nav-items"><img src="/svg/menu.svg" alt="" /></div>
-      <div class="nav-items"><img src="/svg/profile-2.svg" alt="" /></div>
-    </nav>
+      <div class="nav-items">
+        <img src="/svg/password-2.svg" alt="Password" />
+      </div>
+      <div class="nav-items">
+        <img src="/svg/profile-2.svg" alt="Profile" />
+      </div>
+      <div class="nav-items">
+        <img src="/svg/password-2.svg" alt="Menu" />
+      </div>
+    </nav> -->
   </body>
 </html>
