--- a/html/voting_page.html
+++ b/html/voting_page.html
@@ -179,6 +179,12 @@
         margin-top: 3rem;
         text-align: center;
       }
+
+      @media screen and (min-width: 523px) {
+        .about-poll h2 {
+          text-align: left;
+        }
+      }
     </style>
     <!-- <script defer src="/js/voting_page.js"></script> -->
   </head>
