--- a/html/admin_dashboard.html
+++ b/html/admin_dashboard.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard</title>
-    <link
-      rel="stylesheet"
-      href="/css/global.css
-    "
-    />
+    <link rel="stylesheet" href="/css/global.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
@@ -31,6 +27,7 @@
         display: flex;
         min-height: 100vh;
         flex-direction: column;
+        font-family: "Montserrat", sans-serif;
       }
 
       .sidebar {
@@ -68,7 +65,7 @@
       }
 
       .main-content {
-        margin-left: 250px; /* Adjust for sidebar width */
+        margin-left: 250px;
         padding: 20px;
         background-color: #f4f4f4;
         flex: 1;
@@ -118,7 +115,7 @@
         border-radius: 4px;
         cursor: pointer;
         margin-bottom: 10px;
-        width: 100%; /* Full width for mobile */
+        width: 100%;
       }
 
       .add-poll-button:hover {
@@ -131,7 +128,17 @@
         margin-top: 20px;
       }
 
-      /* Mobile Styles */
+      .poll-stats {
+        background-color: white;
+        border-radius: 8px;
+        padding: 15px;
+        margin-bottom: 15px;
+      }
+
+      .poll-stats h3 {
+        margin-bottom: 10px;
+      }
+
       @media (max-width: 768px) {
         .sidebar {
           width: 100%;
@@ -141,24 +148,24 @@
 
         .main-content {
           margin-left: 0;
-          padding: 10px; /* Reduce padding for mobile */
+          padding: 10px;
         }
 
         .section {
-          padding: 10px; /* Reduce padding for mobile */
+          padding: 10px;
         }
 
         .add-poll-button {
-          width: 100%; /* Full width for mobile */
+          width: 100%;
         }
 
         table {
-          font-size: 0.9rem; /* Slightly smaller font for mobile */
+          font-size: 0.9rem;
         }
 
         th,
         td {
-          padding: 8px; /* Adjust padding for smaller screens */
+          padding: 8px;
         }
       }
     </style>
@@ -190,7 +197,7 @@
               <th>Actions</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody id="polls-table-body">
             <!-- Polls will be populated here -->
           </tbody>
         </table>
@@ -206,7 +213,7 @@
               <th>Actions</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody id="users-table-body">
             <!-- Users will be populated here -->
           </tbody>
         </table>
@@ -214,9 +221,15 @@
 
       <div id="view-stats" class="section">
         <h2>View Statistics</h2>
-        <p>Total Polls: <span id="total-polls">0</span></p>
-        <p>Total Users: <span id="total-users">0</span></p>
-        <p>Total Votes: <span id="total-votes">0</span></p>
+        <div id="overall-stats">
+          <p>Total Polls: <span id="total-polls">0</span></p>
+          <p>Total Users: <span id="total-users">0</span></p>
+          <p>Total Votes: <span id="total-votes">0</span></p>
+        </div>
+        <h3>Individual Poll Statistics</h3>
+        <div id="individual-poll-stats">
+          <!-- Individual poll stats will be populated here -->
+        </div>
       </div>
 
       <div id="settings" class="section">
@@ -225,6 +238,149 @@
       </div>
     </div>
 
-    <script src="dashboard.js"></script>
+    <script>
+      // Simulated data - replace with actual data fetching logic
+      let polls = [
+        // { id: 1, question: "Favorite color?", status: "Active", votes: 150 },
+        // {
+        //   id: 2,
+        //   question: "Best programming language?",
+        //   status: "Closed",
+        //   votes: 300,
+        // },
+        // {
+        //   id: 3,
+        //   question: "Preferred work environment?",
+        //   status: "Active",
+        //   votes: 75,
+        // },
+      ];
+
+      const users = [
+        { id: 1, username: "john_doe", email: "john@example.com" },
+        { id: 2, username: "jane_smith", email: "jane@example.com" },
+      ];
+
+      // Function to load poll data from localStorage
+      function loadPollDataFromLocalStorage() {
+        const storedPollData = localStorage.getItem("pollData");
+        if (storedPollData) {
+          const newPoll = JSON.parse(storedPollData);
+          const newPollObject = {
+            id: polls.length + 1,
+            question: newPoll.topic,
+            status: "Active",
+            votes: 0,
+            images: newPoll.images,
+            answers: newPoll.answers,
+          };
+          polls.unshift(newPollObject);
+          localStorage.removeItem("pollData"); // Clear the stored data after adding it to the polls array
+        }
+      }
+
+      // Function to populate polls table
+      function populatePollsTable() {
+        const tableBody = document.getElementById("polls-table-body");
+        tableBody.innerHTML = "";
+        polls.forEach((poll) => {
+          const row = `
+            <tr>
+              <td>${poll.question}</td>
+              <td>${poll.status}</td>
+              <td>
+                <button onclick="editPoll(${poll.id})">Edit</button>
+                <button onclick="deletePoll(${poll.id})">Delete</button>
+              </td>
+            </tr>
+          `;
+          tableBody.innerHTML += row;
+        });
+      }
+
+      // Function to populate users table
+      function populateUsersTable() {
+        const tableBody = document.getElementById("users-table-body");
+        tableBody.innerHTML = "";
+        users.forEach((user) => {
+          const row = `
+            <tr>
+              <td>${user.username}</td>
+              <td>${user.email}</td>
+              <td>
+                <button onclick="editUser(${user.id})">Edit</button>
+                <button onclick="deleteUser(${user.id})">Delete</button>
+              </td>
+            </tr>
+          `;
+          tableBody.innerHTML += row;
+        });
+      }
+
+      // Function to update overall stats
+      function updateOverallStats() {
+        document.getElementById("total-polls").textContent = polls.length;
+        document.getElementById("total-users").textContent = users.length;
+        document.getElementById("total-votes").textContent = polls.reduce(
+          (sum, poll) => sum + poll.votes,
+          0
+        );
+      }
+
+      // Function to display individual poll stats
+      function displayIndividualPollStats() {
+        const statsContainer = document.getElementById("individual-poll-stats");
+        statsContainer.innerHTML = "";
+        polls.forEach((poll) => {
+          const pollStats = `
+            <div class="poll-stats">
+              <h3>${poll.question}</h3>
+              <p>Status: ${poll.status}</p>
+              <p>Total Votes: ${poll.votes}</p>
+              ${
+                poll.images
+                  ? `<p>Number of Images: ${poll.images.length}</p>`
+                  : ""
+              }
+              ${
+                poll.answers
+                  ? `<p>Number of Answers: ${poll.answers.length}</p>`
+                  : ""
+              }
+            </div>
+          `;
+          statsContainer.innerHTML += pollStats;
+        });
+      }
+
+      // Initialize the dashboard
+      function initDashboard() {
+        loadPollDataFromLocalStorage();
+        populatePollsTable();
+        populateUsersTable();
+        updateOverallStats();
+        displayIndividualPollStats();
+      }
+
+      // Call initDashboard when the page loads
+      window.onload = initDashboard;
+
+      // Placeholder functions for edit and delete actions
+      function editPoll(id) {
+        console.log(`Editing poll with id ${id}`);
+      }
+
+      function deletePoll(id) {
+        console.log(`Deleting poll with id ${id}`);
+      }
+
+      function editUser(id) {
+        console.log(`Editing user with id ${id}`);
+      }
+
+      function deleteUser(id) {
+        console.log(`Deleting user with id ${id}`);
+      }
+    </script>
   </body>
 </html>
