--- a/html/add_poll.html
+++ b/html/add_poll.html
@@ -9,192 +9,7 @@
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
       rel="stylesheet"
     />
-    <style>
-      :root {
-        --primary-margin: 1rem;
-        --secondary-margin: 2rem;
-        --nav-height: 5rem;
-      }
-
-      body {
-        font-family: "Poppins", sans-serif;
-        font-size: 1.5rem;
-        margin: 0;
-        padding: 0 0 var(--nav-height);
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-      }
-
-      .container {
-        padding: 1rem 2rem var(--nav-height);
-      }
-
-      header h1 {
-        text-align: center;
-      }
-
-      .media-section {
-        margin-top: var(--primary-margin);
-      }
-
-      .slider {
-        background-color: hsl(208, 100%, 97%);
-        padding: 1rem;
-        display: flex;
-        gap: 2rem;
-        border-radius: 2rem;
-        overflow-x: auto;
-      }
-
-      .uploaded-imgs {
-        display: flex;
-        gap: 1rem;
-      }
-
-      .uploaded-img-container {
-        position: relative;
-        width: 15rem;
-        height: 15rem;
-      }
-
-      .uploaded-img {
-        width: 15rem;
-        height: 15rem;
-        border-radius: 2rem;
-        object-fit: cover;
-      }
-
-      .remove-img {
-        position: absolute;
-        top: 0.5rem;
-        right: 0.5rem;
-        background-color: rgba(255, 255, 255, 0.7);
-        border-radius: 50%;
-        width: 2rem;
-        height: 2rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        font-weight: bold;
-      }
-
-      .add-media {
-        background-color: hsl(0, 0%, 86%);
-        padding: 1rem;
-        border-radius: 2rem;
-        width: 15rem;
-        height: 15rem;
-        font-size: 1.7rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 1rem;
-        cursor: pointer;
-        flex-shrink: 0;
-      }
-
-      .add-media:active {
-        background-color: hsl(0, 0%, 62%);
-      }
-
-      .add-media img {
-        width: 2rem;
-      }
-
-      .add-media input {
-        display: none;
-      }
-
-      .question-section {
-        margin-top: var(--primary-margin);
-      }
-
-      .question-type {
-        width: 100%;
-        margin-top: 1rem;
-        padding: 1.7rem;
-        border: 1px solid hsla(0, 0%, 0%, 0.255);
-        border-radius: 2rem;
-        cursor: pointer;
-      }
-
-      .question-type:focus {
-        outline: none;
-      }
-
-      .answers-section {
-        margin-top: var(--primary-margin);
-        background-color: hsl(0, 0%, 86%);
-        padding: 1rem;
-        border-radius: 2rem;
-        margin-bottom: 3rem;
-      }
-
-      .answers {
-        margin-top: var(--primary-margin);
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-      }
-
-      .answer {
-        border: 1px solid hsla(0, 0%, 0%, 0.255);
-        border-radius: 2rem;
-        cursor: pointer;
-        transition: all 0.3s;
-        padding: 2rem;
-        background-color: hsl(0, 0%, 76%);
-        color: #000;
-      }
-
-      .answer:active {
-        background-color: hsla(0, 0%, 0%, 0.035);
-      }
-
-      .add_answer {
-        background-color: hsl(0, 0%, 95%);
-        color: hsl(120, 95%, 37%);
-        border: 1px solid hsla(120, 95%, 37%, 0.374);
-      }
-
-      hr {
-        border: 1px solid hsla(0, 0%, 0%, 0.104);
-        margin-top: var(--primary-margin);
-      }
-
-      .submit-btn {
-        color: #fff;
-        border-radius: 2rem;
-        cursor: pointer;
-        transition: all 0.3s;
-        padding: 2rem;
-        background-color: #000;
-        text-align: center;
-      }
-
-      .submit-btn:hover {
-        box-shadow: 0 0 10px rgb(0, 0, 0);
-      }
-
-      .submit-btn:active {
-        box-shadow: 0 0 6px rgb(0, 0, 0);
-      }
-
-      .error-message {
-        color: red;
-        margin-top: 1rem;
-        font-size: 1rem;
-      }
-
-      .success-message {
-        color: green;
-        margin-top: 1rem;
-        font-size: 1rem;
-      }
-    </style>
+    <link rel="stylesheet" href="/css/add_poll.css" />
   </head>
   <body>
     <section class="container">
@@ -261,143 +76,6 @@
         <img src="/svg/password-2.svg" alt="Menu" />
       </div>
     </nav>
-
-    <script>
-      const addMedia = document.getElementById("addMedia");
-      const fileInput = document.getElementById("fileInput");
-      const uploadedImgs = document.getElementById("uploadedImgs");
-      const addAnswer = document.getElementById("addAnswer");
-      const answersContainer = document.getElementById("answersContainer");
-      const submitBtn = document.getElementById("submit-btn");
-      const questionInput = document.getElementById("question_type");
-      const errorMessage = document.getElementById("errorMessage");
-      const successMessage = document.getElementById("successMessage");
-
-      let uploadedImages = [];
-
-      addMedia.addEventListener("click", function () {
-        fileInput.click();
-      });
-
-      fileInput.addEventListener("change", function (event) {
-        const files = event.target.files;
-        for (let i = 0; i < files.length; i++) {
-          const file = files[i];
-          if (file) {
-            const reader = new FileReader();
-            reader.onload = function (e) {
-              const imgContainer = document.createElement("div");
-              imgContainer.classList.add("uploaded-img-container");
-
-              const img = document.createElement("img");
-              img.src = e.target.result;
-              img.classList.add("uploaded-img");
-
-              const removeBtn = document.createElement("div");
-              removeBtn.classList.add("remove-img");
-              removeBtn.innerHTML = "×";
-              removeBtn.addEventListener("click", function () {
-                uploadedImgs.removeChild(imgContainer);
-                uploadedImages = uploadedImages.filter(
-                  (image) => image !== e.target.result
-                );
-              });
-
-              imgContainer.appendChild(img);
-              imgContainer.appendChild(removeBtn);
-              uploadedImgs.appendChild(imgContainer);
-
-              uploadedImages.push(e.target.result);
-            };
-            reader.readAsDataURL(file);
-          }
-        }
-      });
-
-      addAnswer.addEventListener("click", function () {
-        const newAnswer = document.createElement("div");
-        newAnswer.classList.add("answer");
-        newAnswer.contentEditable = true;
-        newAnswer.textContent = "";
-        answersContainer.insertBefore(newAnswer, addAnswer);
-
-        newAnswer.focus();
-
-        newAnswer.addEventListener("blur", function () {
-          if (newAnswer.textContent.trim() === "") {
-            answersContainer.removeChild(newAnswer);
-          }
-        });
-      });
-
-      submitBtn.addEventListener("click", function () {
-        const topic = questionInput.value.trim();
-        const answerOptions = Array.from(answersContainer.children)
-          .filter((child) => child.id !== "addAnswer")
-          .map((answer) => answer.textContent.trim());
-
-        if (topic === "") {
-          showMessage("Please enter a question topic.", "error");
-          return;
-        }
-
-        if (uploadedImages.length === 0) {
-          showMessage("Please upload at least one image.", "error");
-          return;
-        }
-
-        if (answerOptions.length < 2) {
-          showMessage("Please add at least two answer options.", "error");
-          return;
-        }
-
-        if (answerOptions.some((option) => option === "")) {
-          showMessage("Please fill in all answer options.", "error");
-          return;
-        }
-
-        const pollData = {
-          topic: topic,
-          images: uploadedImages,
-          answers: answerOptions,
-        };
-
-        try {
-          localStorage.setItem("pollData", JSON.stringify(pollData));
-          showMessage("Poll data saved successfully!", "success");
-
-          // Reset the form
-          questionInput.value = "";
-          uploadedImgs.innerHTML = "";
-          uploadedImages = [];
-          Array.from(answersContainer.children)
-            .filter((child) => child.id !== "addAnswer")
-            .forEach((answer) => answersContainer.removeChild(answer));
-
-          // Navigate to the admin dashboard after a short delay
-          setTimeout(() => {
-            window.location.href = "/html/admin_dashboard.html";
-          }, 1000); // 1 second delay to allow the success message to be seen
-        } catch (error) {
-          showMessage("Error saving poll data: " + error.message, "error");
-        }
-      });
-
-      function showMessage(message, type) {
-        const messageElement = type === "error" ? errorMessage : successMessage;
-        const otherMessageElement =
-          type === "error" ? successMessage : errorMessage;
-
-        messageElement.textContent = message;
-        messageElement.style.display = "block";
-        otherMessageElement.style.display = "none";
-
-        // Clear the message after 5 seconds
-        setTimeout(() => {
-          messageElement.textContent = "";
-          messageElement.style.display = "none";
-        }, 5000);
-      }
-    </script>
+    <script src="/js/add_poll.js"></script>
   </body>
 </html>
