--- a/html/admin_dashboard.html
+++ b/html/admin_dashboard.html
@@ -9,166 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      :root {
-        --black: #0d0c22;
-        --light-gray: hsl(0, 0%, 86%);
-        --dark-gray: hsl(0, 0%, 62%);
-        --primary-color: #007bff;
-      }
-
-      body {
-        display: flex;
-        min-height: 100vh;
-        flex-direction: column;
-        font-family: "Montserrat", sans-serif;
-      }
-
-      .sidebar {
-        width: 250px;
-        background-color: var(--black);
-        color: white;
-        padding: 20px;
-        position: fixed;
-        height: 100%;
-        transition: width 0.3s ease;
-      }
-
-      .sidebar h2 {
-        text-align: center;
-        margin-bottom: 20px;
-      }
-
-      .sidebar ul {
-        list-style: none;
-        padding: 0;
-      }
-
-      .sidebar ul li {
-        margin: 15px 0;
-      }
-
-      .sidebar ul li a {
-        color: white;
-        text-decoration: none;
-        font-weight: 500;
-      }
-
-      .sidebar ul li a:hover {
-        text-decoration: underline;
-      }
-
-      .main-content {
-        margin-left: 250px;
-        padding: 20px;
-        background-color: #f4f4f4;
-        flex: 1;
-        transition: margin-left 0.3s ease;
-      }
-
-      .main-content h1 {
-        text-align: center;
-        margin-bottom: 20px;
-      }
-
-      .section {
-        margin-top: 20px;
-        background-color: var(--light-gray);
-        padding: 15px;
-        border-radius: 8px;
-      }
-
-      table {
-        width: 100%;
-        border-collapse: collapse;
-        margin-top: 10px;
-      }
-
-      table,
-      th,
-      td {
-        border: 1px solid hsla(0, 0%, 0%, 0.255);
-      }
-
-      th,
-      td {
-        padding: 10px;
-        text-align: left;
-      }
-
-      th {
-        background-color: var(--primary-color);
-        color: white;
-      }
-
-      .add-poll-button {
-        padding: 10px 15px;
-        background-color: var(--primary-color);
-        color: white;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        margin-bottom: 10px;
-        width: 100%;
-      }
-
-      .add-poll-button:hover {
-        background-color: hsl(208, 100%, 30%);
-      }
-
-      #logout {
-        color: red;
-        text-align: center;
-        margin-top: 20px;
-      }
-
-      .poll-stats {
-        background-color: white;
-        border-radius: 8px;
-        padding: 15px;
-        margin-bottom: 15px;
-      }
-
-      .poll-stats h3 {
-        margin-bottom: 10px;
-      }
-
-      @media (max-width: 768px) {
-        .sidebar {
-          width: 100%;
-          position: relative;
-          height: auto;
-        }
-
-        .main-content {
-          margin-left: 0;
-          padding: 10px;
-        }
-
-        .section {
-          padding: 10px;
-        }
-
-        .add-poll-button {
-          width: 100%;
-        }
-
-        table {
-          font-size: 0.9rem;
-        }
-
-        th,
-        td {
-          padding: 8px;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="/css/admin_dashboard.css" />
   </head>
   <body>
     <div class="sidebar">
@@ -237,150 +78,6 @@
         <p>Admin settings can be managed here.</p>
       </div>
     </div>
-
-    <script>
-      // Simulated data - replace with actual data fetching logic
-      let polls = [
-        // { id: 1, question: "Favorite color?", status: "Active", votes: 150 },
-        // {
-        //   id: 2,
-        //   question: "Best programming language?",
-        //   status: "Closed",
-        //   votes: 300,
-        // },
-        // {
-        //   id: 3,
-        //   question: "Preferred work environment?",
-        //   status: "Active",
-        //   votes: 75,
-        // },
-      ];
-
-      const users = [
-        { id: 1, username: "john_doe", email: "john@example.com" },
-        { id: 2, username: "jane_smith", email: "jane@example.com" },
-      ];
-
-      // Function to load poll data from localStorage
-      function loadPollDataFromLocalStorage() {
-        const storedPollData = localStorage.getItem("pollData");
-        if (storedPollData) {
-          const newPoll = JSON.parse(storedPollData);
-          const newPollObject = {
-            id: polls.length + 1,
-            question: newPoll.topic,
-            status: "Active",
-            votes: 0,
-            images: newPoll.images,
-            answers: newPoll.answers,
-          };
-          polls.unshift(newPollObject);
-          localStorage.removeItem("pollData"); // Clear the stored data after adding it to the polls array
-        }
-      }
-
-      // Function to populate polls table
-      function populatePollsTable() {
-        const tableBody = document.getElementById("polls-table-body");
-        tableBody.innerHTML = "";
-        polls.forEach((poll) => {
-          const row = `
-            <tr>
-              <td>${poll.question}</td>
-              <td>${poll.status}</td>
-              <td>
-                <button onclick="editPoll(${poll.id})">Edit</button>
-                <button onclick="deletePoll(${poll.id})">Delete</button>
-              </td>
-            </tr>
-          `;
-          tableBody.innerHTML += row;
-        });
-      }
-
-      // Function to populate users table
-      function populateUsersTable() {
-        const tableBody = document.getElementById("users-table-body");
-        tableBody.innerHTML = "";
-        users.forEach((user) => {
-          const row = `
-            <tr>
-              <td>${user.username}</td>
-              <td>${user.email}</td>
-              <td>
-                <button onclick="editUser(${user.id})">Edit</button>
-                <button onclick="deleteUser(${user.id})">Delete</button>
-              </td>
-            </tr>
-          `;
-          tableBody.innerHTML += row;
-        });
-      }
-
-      // Function to update overall stats
-      function updateOverallStats() {
-        document.getElementById("total-polls").textContent = polls.length;
-        document.getElementById("total-users").textContent = users.length;
-        document.getElementById("total-votes").textContent = polls.reduce(
-          (sum, poll) => sum + poll.votes,
-          0
-        );
-      }
-
-      // Function to display individual poll stats
-      function displayIndividualPollStats() {
-        const statsContainer = document.getElementById("individual-poll-stats");
-        statsContainer.innerHTML = "";
-        polls.forEach((poll) => {
-          const pollStats = `
-            <div class="poll-stats">
-              <h3>${poll.question}</h3>
-              <p>Status: ${poll.status}</p>
-              <p>Total Votes: ${poll.votes}</p>
-              ${
-                poll.images
-                  ? `<p>Number of Images: ${poll.images.length}</p>`
-                  : ""
-              }
-              ${
-                poll.answers
-                  ? `<p>Number of Answers: ${poll.answers.length}</p>`
-                  : ""
-              }
-            </div>
-          `;
-          statsContainer.innerHTML += pollStats;
-        });
-      }
-
-      // Initialize the dashboard
-      function initDashboard() {
-        loadPollDataFromLocalStorage();
-        populatePollsTable();
-        populateUsersTable();
-        updateOverallStats();
-        displayIndividualPollStats();
-      }
-
-      // Call initDashboard when the page loads
-      window.onload = initDashboard;
-
-      // Placeholder functions for edit and delete actions
-      function editPoll(id) {
-        console.log(`Editing poll with id ${id}`);
-      }
-
-      function deletePoll(id) {
-        console.log(`Deleting poll with id ${id}`);
-      }
-
-      function editUser(id) {
-        console.log(`Editing user with id ${id}`);
-      }
-
-      function deleteUser(id) {
-        console.log(`Deleting user with id ${id}`);
-      }
-    </script>
+    <script src="/js/admin_dashboard.js"></script>
   </body>
 </html>
