--- a/html/home_page.html
+++ b/html/home_page.html
@@ -6,176 +6,6 @@
     <title>Home page</title>
     <link rel="stylesheet" href="/css/global.css" />
     <link rel="stylesheet" href="/css/home_page.css" />
-    <!-- <script defer src="/js/home_page.js"></script> -->
-    <style>
-      body {
-        font-size: 1.5rem;
-        margin: 0;
-        padding: 0;
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-      }
-
-      .container {
-        flex: 1;
-        padding: 2rem;
-        padding-top: 3rem;
-        padding-bottom: 7rem; /* Add extra padding to account for the nav bar */
-        /* filter: blur(3px); */
-      }
-
-      header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin-bottom: 3rem;
-      }
-
-      header img {
-        width: 4.5rem;
-        cursor: pointer;
-      }
-
-      .welcome-msg {
-        display: flex;
-        flex-direction: column;
-        gap: 0.3rem;
-      }
-
-      .welcome-msg h2 {
-        font-size: 2rem;
-      }
-
-      .welcome-msg p {
-        font-weight: 400;
-        color: rgb(163, 163, 163);
-        margin-left: 1rem;
-      }
-
-      .new-poll {
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
-        margin-bottom: 1rem;
-      }
-
-      .new-poll h2 {
-        font-weight: normal;
-      }
-
-      .avl {
-        background-color: #f00;
-        width: 0.5rem;
-        height: 0.5rem;
-        border-radius: 100%;
-      }
-
-      .available-poll {
-        border-radius: 2rem;
-        padding: 1rem;
-        background-color: #dbdbdb;
-        font-weight: 500;
-        margin-bottom: 4rem;
-        transition: all 0.3s;
-      }
-
-      .host-profile {
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
-        padding: 0.5rem 0.7rem;
-        border-radius: 2rem;
-        width: fit-content;
-        background-color: #9e9e9e;
-        margin-bottom: 2rem;
-      }
-
-      .host-pic {
-        background-color: orange;
-        width: 2.5rem;
-        height: 2.5rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 50%;
-      }
-
-      .available-poll h2 {
-        font-size: 1.7rem;
-        width: 17rem;
-        line-height: 1.5;
-        margin-bottom: 1rem;
-      }
-
-      .available-poll p {
-        font-size: 1rem;
-        margin-bottom: 1rem;
-      }
-
-      .available-poll button {
-        width: 100%;
-        padding: 1.7rem;
-        border-radius: 2rem;
-        background-color: #000;
-        color: #fff;
-        border: none;
-        font-weight: 500;
-        cursor: pointer;
-      }
-
-      .available-poll button:active {
-        background-color: #353535;
-      }
-
-      .poll-stats .head {
-        display: flex;
-        align-items: baseline;
-        justify-content: space-between;
-        margin-bottom: 3rem;
-      }
-
-      .poll-stats .head h2 {
-        font-size: 2rem;
-      }
-
-      .head .p {
-        font-size: 1.2rem;
-        color: #9e9e9e;
-        font-weight: bold;
-      }
-
-      .impressions {
-        background-color: #dbdbdb;
-        padding: 1rem;
-        border-radius: 2rem;
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        transition: all 0.3s;
-      }
-
-      .views {
-        padding: 2rem;
-        border-radius: 2rem;
-        background-color: #9e9e9e;
-        border: 1px solid #00000041;
-        cursor: pointer;
-        transition: all 0.3s;
-      }
-
-      .views:active {
-        background-color: #00000009;
-      }
-
-      .profile-popup {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 2000; /* Ensure the popup stays on top of everything */
-      }
-    </style>
   </head>
   <body>
     <section class="container">
@@ -228,23 +58,6 @@
     </nav>
 
     <div class="profile-popup"></div>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const labelUserFirstName = document.getElementById("profile-name");
-        const currentUserEmail = localStorage.getItem("currentUser");
-        const storedData = JSON.parse(localStorage.getItem("userData")) || [];
-
-        console.log(storedData);
-        const currentUser = storedData.find(
-          (user) => user.email === currentUserEmail
-        );
-
-        if (currentUser) {
-          labelUserFirstName.textContent = `Hello, ${currentUser.firstName}!`;
-        } else {
-          labelUserFirstName.textContent = "Hello, Guest!";
-        }
-      });
-    </script>
+    <script src="/js/home_page.js"></script>
   </body>
 </html>
