--- a/html/voting_page.html
+++ b/html/voting_page.html
@@ -10,183 +10,7 @@
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
       rel="stylesheet"
     />
-
-    <style>
-      /* Global Styles */
-      body {
-        font-size: 1.5rem;
-        margin: 0;
-        padding: 0;
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-      }
-
-      /* Section Styles */
-      .container {
-        flex: 1;
-        overflow-y: auto;
-        padding-bottom: 7rem;
-      }
-
-      /* Image Slider Styles */
-      .image-slider {
-        padding: 1rem;
-        width: 100%;
-      }
-
-      .slider {
-        max-width: 100rem;
-        height: 30rem;
-        margin: 0 auto;
-        position: relative;
-        overflow: hidden;
-      }
-
-      .slide {
-        position: absolute;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: transform 1s;
-      }
-
-      .slide img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: 0.5rem;
-      }
-
-      /* Slider Buttons */
-      .slider__btn {
-        position: absolute;
-        top: 50%;
-        z-index: 10;
-        border: none;
-        background: rgba(255, 255, 255, 0.7);
-        /* color: #333; */
-        color: transparent;
-        background-color: transparent;
-        border-radius: 50%;
-        height: 5.5rem;
-        width: 5.5rem;
-        font-size: 3.25rem;
-        cursor: pointer;
-      }
-
-      .slider__btn--left {
-        left: 6%;
-        transform: translate(-50%, -50%);
-      }
-
-      .slider__btn--right {
-        right: 6%;
-        transform: translate(50%, -50%);
-      }
-
-      /* Dots Navigation */
-      .dots {
-        position: absolute;
-        bottom: 5%;
-        left: 50%;
-        transform: translateX(-50%);
-        display: flex;
-      }
-
-      .dots__dot {
-        border: none;
-        background-color: #b9b9b9;
-        opacity: 0.7;
-        height: 1rem;
-        width: 1rem;
-        border-radius: 50%;
-        margin-right: 1.75rem;
-        cursor: pointer;
-        transition: all 0.5s;
-      }
-
-      .dots__dot:last-child {
-        margin: 0;
-      }
-
-      .dots__dot--active {
-        background-color: #fff;
-        opacity: 1;
-      }
-
-      /* Text Section Styles */
-      .text-section {
-        padding: 0 2rem;
-        text-align: center;
-      }
-
-      .about-poll h3 {
-        color: #6d6d6d;
-        /* font-size: 1.5rem; */
-        font-weight: normal;
-        margin-bottom: 0.5rem;
-      }
-
-      .about-poll h2 {
-        width: 30rem;
-        font-size: 1.8rem;
-        line-height: 1.4;
-      }
-
-      /* Option Styles */
-      .options {
-        margin-top: 2rem;
-        background-color: #dbdbdb;
-        padding: 1rem;
-        border-radius: 2rem;
-
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-      }
-
-      .option {
-        padding: 2rem;
-        border-radius: 2rem;
-        background-color: #9e9e9e;
-        cursor: pointer;
-        text-align: left;
-        color: #000;
-      }
-
-      .option:active {
-        background-color: #0000006a;
-      }
-
-      .option.selected {
-        background-color: #00000076;
-        /* border-color: #000; */
-      }
-
-      .submit-btn {
-        margin: 0 2rem;
-        padding: 2rem;
-        border-radius: 2rem;
-        background-color: #000;
-        cursor: pointer;
-        text-align: left;
-        color: #fff;
-
-        margin-top: 3rem;
-        text-align: center;
-      }
-
-      @media screen and (min-width: 523px) {
-        .about-poll h2 {
-          text-align: left;
-        }
-      }
-    </style>
-    <!-- <script defer src="/js/voting_page.js"></script> -->
+    <link rel="stylesheet" href="/css/voting_page.css" />
   </head>
   <body>
     <div>
@@ -240,127 +64,6 @@
         <img src="/svg/menu.svg" alt="Menu" />
       </div>
     </nav>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const slider = function () {
-          const slider = document.querySelector(".slider");
-          const slides = document.querySelectorAll(".slide");
-          const btnLeft = document.querySelector(".slider__btn--left");
-          const btnRight = document.querySelector(".slider__btn--right");
-          const dotContainer = document.querySelector(".dots");
-
-          let curSlide = 0;
-          const maxSlide = slides.length - 1;
-
-          // Functions
-          const createDots = function () {
-            slides.forEach((_, i) => {
-              const html = `<button class="dots__dot" data-slide="${i}"></button>`;
-              dotContainer.insertAdjacentHTML("beforeend", html);
-            });
-          };
-
-          const activateDot = function (slide) {
-            document
-              .querySelectorAll(".dots__dot")
-              .forEach((dot) => dot.classList.remove("dots__dot--active"));
-            document
-              .querySelector(`.dots__dot[data-slide="${slide}"]`)
-              .classList.add("dots__dot--active");
-          };
-
-          const goToSlide = function (slide) {
-            slides.forEach(
-              (s, i) =>
-                (s.style.transform = `translateX(${100 * (i - slide)}%)`)
-            );
-          };
-
-          const nextSlide = function () {
-            if (curSlide === maxSlide) {
-              curSlide = 0;
-            } else {
-              curSlide++;
-            }
-            goToSlide(curSlide);
-            activateDot(curSlide);
-          };
-
-          const prevSlide = function () {
-            if (curSlide === 0) {
-              curSlide = maxSlide;
-            } else {
-              curSlide--;
-            }
-            goToSlide(curSlide);
-            activateDot(curSlide);
-          };
-
-          const init = function () {
-            createDots();
-            activateDot(0);
-            goToSlide(0);
-          };
-
-          init();
-
-          // Event handlers
-          btnRight.addEventListener("click", nextSlide);
-          btnLeft.addEventListener("click", prevSlide);
-
-          document.addEventListener("keydown", function (e) {
-            e.key === "ArrowLeft" && prevSlide();
-            e.key === "ArrowRight" && nextSlide();
-          });
-
-          dotContainer.addEventListener("click", function (e) {
-            if (e.target.classList.contains("dots__dot")) {
-              const { slide } = e.target.dataset;
-              goToSlide(slide);
-              activateDot(slide);
-            }
-          });
-
-          // Swipe functionality for mobile users
-          let touchStartX = 0;
-          let touchEndX = 0;
-
-          const handleTouchStart = (e) => {
-            touchStartX = e.touches[0].clientX;
-          };
-
-          const handleTouchMove = (e) => {
-            touchEndX = e.touches[0].clientX;
-          };
-
-          const handleTouchEnd = () => {
-            const touchDiff = touchStartX - touchEndX;
-            if (touchDiff > 50) {
-              nextSlide();
-            } else if (touchDiff < -50) {
-              prevSlide();
-            }
-            touchStartX = 0;
-            touchEndX = 0;
-          };
-
-          slider.addEventListener("touchstart", handleTouchStart, false);
-          slider.addEventListener("touchmove", handleTouchMove, false);
-          slider.addEventListener("touchend", handleTouchEnd, false);
-        };
-
-        slider();
-
-        document.querySelectorAll(".option").forEach((option) => {
-          option.addEventListener("click", function () {
-            document
-              .querySelectorAll(".option")
-              .forEach((opt) => opt.classList.remove("selected"));
-            this.classList.add("selected");
-            console.log("Voted for:", this.textContent);
-          });
-        });
-      });
-    </script>
+    <script src="/js/voting_page.js"></script>
   </body>
 </html>
