--- a/html/admin_login.html
+++ b/html/admin_login.html
@@ -57,7 +57,7 @@
       </form>
 
       <div class="sign-up">
-        <p>Login as a <a class="admin-login" href="/login.html">User</a></p>
+        <p>Login as a <a class="admin-login" href="/index.html">User</a></p>
       </div>
     </div>
     <script src="/js/admin_login.js"></script>
