--- a/html/signup.html
+++ b/html/signup.html
@@ -95,7 +95,7 @@
 
       <div class="login">
         <p>Already have an account?</p>
-        <a href="/login.html">LOGIN</a>
+        <a href="/index.html">LOGIN</a>
       </div>
     </div>
 
