--- a/html/admin_login.html
+++ b/html/admin_login.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="header">Login</h1>
+      <h1 class="header">Admin</h1>
 
       <p class="error-msg general-error-msg" id="general-error-msg"></p>
 
